# rust-lambda-project

./: Cargo.toml
src/: main.rs
