[package]
name = "rust-lambda-project"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.11.1", default-features = false, features = ["apigw_http", "tracing"] }
lambda_runtime = "0.11.2"

tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }

